prepare gradle for tests